tests/error/assign_wrong_type_after_sub_block2.block
test14 {
   // Type error: Using a variable with another type after a sub-block.
   int i = 1 ;
   if (true) {
   }
   i = true;
}